--- a/src/main/resources/oscarResources_en.properties
+++ b/src/main/resources/oscarResources_en.properties
@@ -1094,6 +1094,7 @@ admin.admin.uploadMOHFile = Upload MOH files
 admin.admin.viewMOHFiles = View MOH files
 admin.admin.invoiceRpts = Invoice Reports
 admin.admin.endYearStatement = End Year Statement
+admin.admin.managePaymentType = Manage Payment Type
 admin.admin.rptbyTemplate = Report by Template
 admin.admin.rehabStudy = Rehab Study
 admin.admin.exportPatientbyAppt = Export Patient List by Appointment Time
