support two signatures by scriptel and fixed many bugs

--- a/src/main/resources/oscarResources_en.properties
+++ b/src/main/resources/oscarResources_en.properties
@@ -6151,6 +6151,7 @@ eFormGenerator.signatureAddButton=Add to List
 eFormGenerator.signatureEmptyButton=Empty List
 eFormGenerator.signatureLocationButton=Click here, then drag a box around the signature area
 eFormGenerator.signatureFreehand=Add a drawing area to "sign" a signature on the fly
+eFormGenerator.signautreScriptelPad=Add a drawing area to "sign" a signature on the scriptel
 eFormGenerator.input=Add in form input fields (one-by-one)
 eFormGenerator.inputType=a) Select An Input Type
 eFormGenerator.inputTypeText=Single-line text input
