--- a/src/main/resources/oscarResources_en.properties
+++ b/src/main/resources/oscarResources_en.properties
@@ -4232,6 +4232,7 @@ eform.uploadhtml.btnBack=Back to Admin Page
 eform.uploadhtml.formName=eForm name
 eform.uploadhtml.formSubject=Additional Information
 eform.uploadhtml.formFileName=Filename
+eform.uploadhtml.showLatestFormOnly=Show Latest Form Only
 eform.uploadhtml.patientIndependent=Patient Independent
 eform.uploadhtml.btnUpload=Upload
 eform.uploadhtml.btnDeleted=List Deleted eForms
@@ -6041,6 +6042,7 @@ oscar.billing.CA.ON.billingON.OB.SLIcode.IHF=IHF | Independant Health Facility
 oscar.billing.CA.ON.billingON.OB.SLIcode.OFF=OFF | Office of community physician
 oscar.billing.CA.ON.billingON.OB.SLIcode.OTN=OTN | Ontario Telemedicine Network
 oscar.billing.CA.ON.billingON.OB.SLIcode.PDF=PDF | Private Diagnostic Facility
+oscar.billing.CA.ON.billingON.OB.SLIcode.RTF=RTF | Rehabilitation Treatment Facility
 
 oscar.billing.CA.ON.billingON.sobUpload.showCodesChangedPrices=Show codes with changed fees
 oscar.billing.CA.ON.billingON.sobUpload.showNewCodes=Show new codes
