1.add license hearder for java and jsp files  2.add interface to customize invoice print backgground

--- a/src/main/resources/oscarResources_en.properties
+++ b/src/main/resources/oscarResources_en.properties
@@ -1095,6 +1095,8 @@ admin.admin.viewMOHFiles = View MOH files
 admin.admin.invoiceRpts = Invoice Reports
 admin.admin.endYearStatement = End Year Statement
 admin.admin.managePaymentType = Manage Payment Type
+admin.admin.setInvoiceLetterHead = Set invoice letter head
+admin.admin.uploadInvoiceBgImage = Set invoice print background image
 admin.admin.rptbyTemplate = Report by Template
 admin.admin.rehabStudy = Rehab Study
 admin.admin.exportPatientbyAppt = Export Patient List by Appointment Time
