Bug: modify ui for add/edit payment

--- a/src/main/resources/oscarResources_en.properties
+++ b/src/main/resources/oscarResources_en.properties
@@ -1097,6 +1097,7 @@ admin.admin.endYearStatement = End Year Statement
 admin.admin.managePaymentType = Manage Payment Type
 admin.admin.setInvoiceLetterHead = Set invoice letter head
 admin.admin.uploadInvoiceBgImage = Set invoice print background image
+admin.admin.editBillPaymentList = Edit payment list
 admin.admin.rptbyTemplate = Report by Template
 admin.admin.rehabStudy = Rehab Study
 admin.admin.exportPatientbyAppt = Export Patient List by Appointment Time
